@@ -8,6 +8,8 @@ Improved performance of the Geometry -> float scalar operations: `area`, `length
 `minimum_clearance`, `x`, `y`, `z` and `m`. Benchmarks showed a change of call duration
 from 2.6 microseconds to 0.2 microseconds (on the `Point.x` attribute).
 
+Added `transform_coordseq`, which applies a transformation function per coordinate sequence
+in a more performant way than `shapely.ops.transform` does. `shapely.ops.transform` is now deprecated.
 
 2.1.2 (2025-09-24)
 ------------------
